cabal-version:       2.0
name:                acc-gpu-crash
version:             0.0.1.0
author:              Tom Smeding
maintainer:          tom@tomsmeding.com
build-type:          Simple

executable acc-gpu-crash
  main-is:             Main.hs
  other-modules:       N1, N2
  build-depends:       base >= 4.13 && < 4.15,
                       accelerate ^>= 1.3.0.0,
                       accelerate-llvm-native ^>= 1.3.0.0,
                       accelerate-llvm-ptx ^>= 1.3.0.0
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall -g -threaded -rtsopts
